# nesemu.rs

./: .gitignore  Cargo.toml  LICENSE  README.md  hello.nes  mario.nes
.github/workflows/: rust.yml
src/: bus.rs  cartridge.rs  cpu.rs  joypad.rs  main.rs  trace.rs
src/ppu/: mod.rs
src/ppu/registers/: control.rs  mask.rs  status.rs
src/render/: mod.rs
