[package]
name = "nesemu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
bitflags = "2.0.2"

rand = "0.8.5"
sdl2 = { version = "0.35.2", features = ["bundled"] } 

[[bin]]
name = "tiles_viewer"
path = "src/bin/tiles_viewer.rs"
